examples/invalid/56_double_inf_is_not_literal.lane
module Examples.Invalid.DoubleInfIsNotLiteral

pub let bad : Double = inf
